# llvm-transformation-passes

./: README.md  cmd.sh
examples/: foo1.ll  foo2.ll  foo3.ll  foo4.ll
include/: AddCall.h  AddConst.h  AddMetadata.h  AddToSub.h  MulToShift.h
lib/: AddCallAnalysis.cpp  AddCallPass.cpp  AddConstAnalysis.cpp  AddConstPass.cpp  AddConstPlugin.cpp  AddMetadataAnalysis.cpp  AddMetadataPass.cpp  AddToSubAnalysis.cpp  AddToSubPass.cpp  CMakeLists.txt  MulToShiftAnalysis.cpp  MulToShiftPass.cpp
outputs/: bar1.ll  bar2.ll  bar3.ll  bar4.ll
test/: .lit_test_times.txt  foo.ll  foo1.ll  foo2.ll  foo3.ll  foo4.ll  lit.cfg.py
test/Output/: foo.ll.script  foo1.ll.script  foo2.ll.script  foo3.ll.script  foo4.ll.script
tests/: baz.txt  baz1.txt  baz2.txt  baz3.txt  baz4.txt
